# cmake-course

./: Dockerfile  README.md
v1/: CMakeLists.txt  add.c  command.txt  var.py  var.txt
v2/: CMakeLists.txt
v3/: CMakeLists.txt
v3/src/: mult.c
v4/: CMakeLists.txt  main.c
v4/include/: head.h
v4/src/: div.c  sub.c
v5/: CMakeLists.txt
v5/src/: main.cpp
